@@ -160,15 +160,15 @@ sub get_policy_evaluated_as_xml {
 }
 
 1;
-# ABSTRACT: DMARC aggregate report
+# ABSTRACT: aggregate report object
 __END__
 sub {}
 
 =head1 DESCRIPTION
 
-This class is used internally as the canonization of an aggregate report.
+This class is used as the canonization of an aggregate report.
 
-When reports are received, the XML is parsed into an L<Aggregate|Mail::DMARC::Report::Aggregate> object, which then gets passed to the Report::Store and saved. When sending DMARC reports, data is extracted from the L<Store|Mail::DMARC::Report::Store> as an Aggregate object, assembled as XML, and sent.
+When reports are received, the XML is parsed into an L<Aggregate|Mail::DMARC::Report::Aggregate> object, which then gets passed to the Report::Store and saved. When sending DMARC reports, data is extracted from the L<Store|Mail::DMARC::Report::Store> as an Aggregate object, exported as XML, and sent.
 
 =head1 2013 Draft Description
 
