@@ -58,9 +58,20 @@ sub get_size_limit {
 
 1;
 
-# ABSTRACT: a DMARC reporting URI
+# ABSTRACT: a DMARC report URI
 __END__
 sub {}
+
+=head1 SYNOPSIS
+
+  use Mail::DMARC::URI;
+  my $duri = Mail::DMARC::URI->new;
+  my $uri_ref = $duri->parse('mailto:rua@example.com,mailto:rua@external.otherdomain.com');
+  foreach my $u ( @$uri_ref ) {
+      my $method = $u->{uri};
+      my $max    = $u->{max_bytes};
+      ... do some URI stuff ...
+  };
 
 =head1 ABNF
 
