@@ -1,20 +1,0 @@
-package Mail::DMARC::Report::View;
-# VERSION
-use strict;
-use warnings;
-
-use Carp;
-
-use parent 'Mail::DMARC::Base';
-
-1;
-
-# ABSTRACT: view DMARC report(s)
-__END__
-sub {}
-
-=head1 DESCRIPTION
-
-View DMARC reports
-
-=cut
